Add instructions for various contexts

--- a/Streams-RollingAverageSample.ipynb
+++ b/Streams-RollingAverageSample.ipynb
@@ -38,10 +38,33 @@
     "\n",
     "\n",
     "<a name=\"setup\"></a>\n",
-    "# 1. Setup\n",
-    "### 1.1 Add credentials for the IBM Streams service\n",
+    "# 1.  Build setup\n",
     "\n",
-    "In order to submit a Streams application you need to provide the name of the Streams instance.\n",
+    "Streams Python applications or topologies can be executed in multiple scenarios, such as from a notebook running within an IBM Cloud Pak for Data project, or a standalone application connecting to a local installation.\n",
+    "\n",
+    "In each case, you have to connect to the Streams instance to submit the application for execution.\n",
+    "However, the information required to connect to the instance depends on the scenario. \n",
+    "\n",
+    "Therefore, choose the scenario from the list below that matches your target Streams installation and use the code snippets provided to connect to the instance. \n",
+    "\n",
+    "Each snippet will also set the [`contextType`](https://streamsxtopology.readthedocs.io/en/latest/streamsx.topology.context.html#streamsx.topology.context.ContextTypes) which determines the execution context.\n",
+    "\n",
+    "-  Run on a Streams service in IBM Cloud Pak for Data\n",
+    "    - [From a project](#cpd_1)\n",
+    "    - [Without a project](#cpd_2)\n",
+    "- [Run on a standalone Streams installation (v5.2+, installed via Kubernetes)](#edge)\n",
+    "- [Run on the Streaming Analytics service on IBM Cloud](#sas)\n",
+    "- [Run on a local installation of Streams v4.2 or v4.3](#v4)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a name=\"cpd_1\"></a>\n",
+    "\n",
+    "### 1.1.1a Option 1:  Submit to Streams on IBM Cloud Pak for Data  from a project\n",
+    "In this context you need to provide the name of the Streams instance.\n",
     "\n",
     "1. From the navigation menu, click **My instances**.\n",
     "2. Click the **Provisioned Instances** tab.\n",
@@ -55,8 +78,219 @@
    "outputs": [],
    "source": [
     "from icpd_core import icpd_util\n",
-    "streams_instance_name = \"my-instance\" ## Change this to Streams instance\n",
-    "cfg=icpd_util.get_service_instance_details(name=streams_instance_name)"
+    "from streamsx.topology import context\n",
+    "\n",
+    "streams_instance_name = \"sample-streams\" ## Change this to Streams instance\n",
+    "\n",
+    "cfg=icpd_util.get_service_instance_details(name=streams_instance_name)\n",
+    "\n",
+    "# This specifies how the application will be deployed\n",
+    "contextType = context.ContextTypes.DISTRIBUTED\n",
+    "\n",
+    "\n",
+    "print(\"Saved credentials, continue to section 1.2\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a name=\"cpd_2\"></a>\n",
+    "### 1.1.1b Option 1b:    Submit to Streams on Cloud Pak for Data *without* a Cloud Pak for Data project  \n",
+    "\n",
+    "Collect the following environment information. Set the values for each variable where indicated in the following cell.\n",
+    "\n",
+    "- `CP4D_URL` - Cloud Pak for Data deployment URL, e.g. `https://cp4d_server:31843`. \n",
+    "\n",
+    "- `STREAMS_INSTANCE_ID`:\n",
+    "    1. From the navigation menu, click **My instances**.\n",
+    "    2. Click the **Provisioned Instances** tab.\n",
+    "    3. Select the Streams instance you want to use, and set the value of `STREAMS_INSTANCE_ID` in the cell below to the name of the instance.\n",
+    "\n",
+    "- `STREAMS_USERNAME` - (optional) User name to submit the job as, defaulting to the current operating system user name.\n",
+    "- `STREAMS_PASSWORD` - Password for authentication.\n",
+    "\n",
+    "Contact your administrator for details.\n",
+    "\n",
+    "If you are using a username and password to authenticate, enter them when prompted, otherwise delete those lines before running the cell."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Streams username········\n",
+      "Streams password········\n",
+      "Saved credentials, continue to section 1.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import getpass\n",
+    "\n",
+    "from streamsx.topology import context\n",
+    "cfg ={}\n",
+    "\n",
+    "CP4D_URL = # Paste URL here\n",
+    "STREAMS_INSTANCE_ID =  # Paste URL here\"\n",
+    "\n",
+    "os.environ[\"STREAMS_INSTANCE_ID\"]= STREAMS_INSTANCE_ID\n",
+    "os.environ[\"CP4D_URL\"]= CP4D_URL\n",
+    "os.environ[\"STREAMS_USERNAME\"]= getpass.getpass(\"Streams username\")\n",
+    "os.environ[\"STREAMS_PASSWORD\"]= getpass.getpass(\"Streams password\")\n",
+    "\n",
+    "# This specifies how the application will be deployed\n",
+    "contextType = context.ContextTypes.DISTRIBUTED\n",
+    "\n",
+    "print(\"Saved credentials, continue to section 1.2\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a name=\"edge\"></a>\n",
+    "### 1.1.2 Option 2:    Submit to a  Standalone Streams installation\n",
+    "In order to submit a Streams application you need the following information from the Streams instance\n",
+    "\n",
+    "- `STREAMS_BUILD_URL` - Streams build service URL, e.g. when the service is exposed as node port: `https://<NODE-IP>:<NODE-PORT>`\n",
+    "- `STREAMS_REST_URL` - Streams SWS service (REST API) URL, e.g. when the service is exposed as node port: `https://<NODE-IP>:<NODE-PORT>`\n",
+    "- `STREAMS_USERNAME` - (optional) User name to submit the job as, defaulting to the current operating system user name.\n",
+    "- `STREAMS_PASSWORD` - Password for authentication.\n",
+    "\n",
+    "The documentation has the steps to retrieve the URLs for the Build and REST service.\n",
+    "Set the values for each variable where indicated in the following cell."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Streams username········\n",
+      "Streams password········\n",
+      "Saved credentials, continue to section 1.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import getpass\n",
+    "\n",
+    "from streamsx.topology import context\n",
+    "cfg = {}\n",
+    "STREAMS_BUILD_URL =  # Paste URL here\n",
+    "STREAMS_REST_URL =  #  # Paste URL here\n",
+    "os.environ[\"STREAMS_REST_URL\"]= STREAMS_REST_URL\n",
+    "os.environ[\"STREAMS_BUILD_URL\"]= STREAMS_BUILD_URL\n",
+    "os.environ[\"STREAMS_USERNAME\"]= getpass.getpass(\"Streams username\")\n",
+    "os.environ[\"STREAMS_PASSWORD\"]= getpass.getpass(\"Streams password\")\n",
+    "\n",
+    "# This specifies how the application will be deployed\n",
+    "contextType = context.ContextTypes.DISTRIBUTED\n",
+    "\n",
+    "print(\"Saved credentials, continue to section 1.2\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a name=\"sas\"></a>\n",
+    "### 1.1.3 Option 3:    Submit to the Streaming Analytics service\n",
+    "To connect to the Streaming Analytics service in IBM cloud you need the **service instance name** and the **service credentials**.\n",
+    "Retrieve your service name and credentials from the Streaming Analytics service dashboard.\n",
+    "\n",
+    "- Service instance name: This is the name of the service instance, at the top  of the service dashboard.\n",
+    "- Service credentials: To copy your service credentials, open the Streaming Analytics service dashboard click **Service Credentials**, then **View Credentials**, and copy the contents of the cell. Click **Add new credentials** if there are no credentials listed.\n",
+    "\n",
+    "See the image below for an example. Click to enlarge.\n",
+    "<a href=\"https://developer.ibm.com/streamsdev/wp-content/uploads/sites/15/2019/11/copycredentials.png\">\n",
+    "<img width=\"600\" height=\"500\" src=\"https://developer.ibm.com/streamsdev/wp-content/uploads/sites/15/2019/11/copycredentials.png\"></a>\n",
+    "\n",
+    "Run the following cells and enter the name and credentials when prompted.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Do not modify this cell\n",
+    "SA_credentials = None\n",
+    "service_name = \"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved credentials, continue to section 1.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "from streamsx.topology.context import ConfigParams\n",
+    "from streamsx.topology import context\n",
+    "\n",
+    "import getpass\n",
+    "if  SA_credentials is None: \n",
+    "    SA_credentials=getpass.getpass('Streaming Analytics credentials:')\n",
+    "    service_name =input('Streaming Analytics name:')\n",
+    "\n",
+    "vs={'streaming-analytics': [{'name': service_name, 'credentials': json.loads (SA_credentials)}]}\n",
+    "cfg = {}\n",
+    "cfg[ConfigParams.VCAP_SERVICES] = vs\n",
+    "cfg[ConfigParams.SERVICE_NAME] = service_name\n",
+    "\n",
+    "# This specifies how the application will be deployed\n",
+    "\n",
+    "contextType = context.ContextTypes.STREAMING_ANALYTICS_SERVICE\n",
+    "print(\"Saved credentials, continue to section 1.2\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a name=\"v4\"></a>\n",
+    "### 1.1.4 Option 4:    Submit to  Streams v4.2 or v4.3\n",
+    "\n",
+    "If you are using the Streams Quick Start Edition, you do not have to do any further configuration. \n",
+    "\n",
+    "Otherwise, make sure that the `STREAMS_INSTANCE_ID` and `STREAMS_DOMAIN_ID` are set as environment variables.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Comment out if needed\n",
+    "# STREAMS_INSTANCE_ID = # Set instance ID\n",
+    "# STREAMS_DOMAIN_ID = # Set domain ID\n",
+    "# os.environ[\"STREAMS_INSTANCE_ID\"]= STREAMS_INSTANCE_ID\n",
+    "# os.environ[\"STREAMS_DOMAIN_ID\"]= STREAMS_DOMAIN_ID\n",
+    "# This specifies how the application will be deployed\n",
+    "contextType = context.ContextTypes.DISTRIBUTED"
    ]
   },
   {
@@ -76,13 +310,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO: streamsx package version: 1.13.14\n"
+     ]
+    }
+   ],
    "source": [
     "import streamsx.topology.context\n",
     "print(\"INFO: streamsx package version: \" + streamsx.topology.context.__version__)\n",
-    "\n",
     "#For more details uncomment line below.\n",
     "#!pip show streamsx"
    ]
@@ -100,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,9 +538,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<streamsx.topology.topology.Sink at 0x7f045c70c668>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import json\n",
     "# publish results as JSON\n",
@@ -324,16 +576,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Submitting to DISTRIBUTED context\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Insecure host connections enabled.\n",
+      "Insecure host connections enabled.\n",
+      "Insecure host connections enabled.\n",
+      "Insecure host connections enabled.\n",
+      "Insecure host connections enabled.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "JobId:  9 \n",
+      "Job name:  notebook::SensorAverages_9\n"
+     ]
+    }
+   ],
    "source": [
     "from streamsx.topology import context\n",
     "\n",
     "# Disable SSL certificate verification if necessary\n",
     "cfg[context.ConfigParams.SSL_VERIFY] = False\n",
+    "\n",
+    "print(\"Submitting to \" + contextType  + \" context\")\n",
     "# submit the topology 'topo'\n",
-    "submission_result = context.submit (\"DISTRIBUTED\", topo, config = cfg)\n",
+    "submission_result = context.submit (contextType, topo, config = cfg)\n",
     "\n",
     "# The submission_result object contains information about the running application, or job\n",
     "if submission_result.job:\n",
@@ -353,9 +634,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'average': 1401.0884850389868, 'sensor_id': 'sensor_1', 'period_end': 'Mon Nov 11 22:21:31 2019'}\n",
+      "{'average': 1354.7456766554853, 'sensor_id': 'sensor_10', 'period_end': 'Mon Nov 11 22:21:31 2019'}\n",
+      "{'average': 1823.6135796171936, 'sensor_id': 'sensor_100', 'period_end': 'Mon Nov 11 22:21:31 2019'}\n",
+      "{'average': 1617.1620805690814, 'sensor_id': 'sensor_11', 'period_end': 'Mon Nov 11 22:21:31 2019'}\n",
+      "{'average': 1821.7990644663246, 'sensor_id': 'sensor_12', 'period_end': 'Mon Nov 11 22:21:31 2019'}\n",
+      "{'average': 1538.6331621586512, 'sensor_id': 'sensor_13', 'period_end': 'Mon Nov 11 22:21:31 2019'}\n",
+      "{'average': 1516.803832278493, 'sensor_id': 'sensor_14', 'period_end': 'Mon Nov 11 22:21:31 2019'}\n",
+      "{'average': 1450.0449833862046, 'sensor_id': 'sensor_15', 'period_end': 'Mon Nov 11 22:21:31 2019'}\n",
+      "{'average': 1532.283679450917, 'sensor_id': 'sensor_16', 'period_end': 'Mon Nov 11 22:21:31 2019'}\n",
+      "{'average': 1519.6040973560582, 'sensor_id': 'sensor_17', 'period_end': 'Mon Nov 11 22:21:31 2019'}\n"
+     ]
+    }
+   ],
    "source": [
     "# Connect to the view and display the data\n",
     "queue = averages_view.start_data_fetch()\n",
@@ -391,10 +689,18 @@
     "\n",
     "## 4.2 See job status \n",
     "\n",
+    "#### View job status in IBM Cloud Pak for Data\n",
     "You can view job status and logs by going to **My Instances** > **Jobs**. Find your job based on the id printed above.\n",
     "Retrieve job logs using the \"Download logs\" action from the job's context menu.\n",
     "\n",
-    "To view other information about the job such as detailed metrics, access the graph. Go to **My Instances** > **Jobs**. Select \"View graph\" action for the running job.\n"
+    "To view other information about the job such as detailed metrics, access the graph. Go to **My Instances** > **Jobs**. Select \"View graph\" action for the running job.\n",
+    "\n",
+    "#### View job status in other Streams installations\n",
+    "\n",
+    "- Open the Streams Console. \n",
+    "    - **IBM Cloud**: Open the service instance page and click **Launch**.\n",
+    "    - **Standalone Streams instance in IBM Cloud Pak for Data**: Get the URL from the documentation.\n",
+    "    - **Local Streams installation**: `streamtool geturl`."
    ]
   },
   {
@@ -446,7 +752,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python3.6",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -460,7 +766,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
