--- a/Streams-RollingAverageSample.ipynb
+++ b/Streams-RollingAverageSample.ipynb
@@ -89,15 +89,13 @@
    "outputs": [],
    "source": [
     "from icpd_core import icpd_util\n",
+    "from streamsx.topology import context\n",
+    "\n",
     "streams_instance_name = \"my-instance\" ## Change this to Streams instance\n",
     "cfg=icpd_util.get_service_instance_details(name=streams_instance_name)\n",
     "\n",
-    "from icpd_core import icpd_util\n",
-    "from streamsx.topology import context\n",
-    "\n",
     "def submit_topology(topo):\n",
-    "    streams_instance_name = \"my-instance\" ## Change this to Streams instance\n",
-    "    cfg=icpd_util.get_service_instance_details(name=streams_instance_name)\n",
+    "    global cfg\n",
     "    # Disable SSL certificate verification if necessary\n",
     "    cfg[context.ConfigParams.SSL_VERIFY] = False\n",
     "    # Topology wil be deployed as a distributed app\n",
@@ -128,14 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Paste snippet from development guide\n",
-    "from streamsx.topology import context\n",
-    "def submit_topology(topo):\n",
-    "    \n",
-    "    contextType = context.ContextTypes.DISTRIBUTED\n",
-    "    cfg = {}\n",
-    "    cfg[context.ConfigParams.SSL_VERIFY] = False\n",
-    "    return context.submit (contextType, topo, config = cfg)\n"
+    "## Paste snippet from development guide\n"
    ]
   },
   {
