--- a/Streams-RollingAverageSample.ipynb
+++ b/Streams-RollingAverageSample.ipynb
@@ -115,7 +115,7 @@
     "- Choose the tab that best matches your environment. Copy the code under the heading **Copy this code snippet**.\n",
     "- Paste it in the cell below.\n",
     "\n",
-    "[Connection instructions from the development guide](https://ibmstreams.github.io/streamsx.documentation/docs/python/1.6/python-appapi-devguide-3a)\n",
+    "[Connection instructions from the development guide](https://ibmstreams.github.io/streamsx.documentation/docs/python/1.6/python-appapi-devguide-3/#1-set-up-a-connection-to-the-streams-instance)\n",
     "\n",
     "Each snippet will define a function called `submit_topology` that will be used later on to submit the `Topology` once it is defined."
    ]
@@ -573,7 +573,7 @@
     "<li>Select <b>View graph</b> from the context menu action for the running job.</li>\n",
     "</ol>\n",
     "\n",
-    "For all other development environments, use the Streams Console.\n",
+    "For all other development environments, use the Streams Console.\n\n",
     "[See instructions and an example](http://ibm.biz/Bdz6yD)."
    ]
   },
