--- a/Streams-RollingAverageSample.ipynb
+++ b/Streams-RollingAverageSample.ipynb
@@ -108,7 +108,7 @@
    "metadata": {},
    "source": [
     "<a name=\"notcpd\"></a>\n",
-    "### 1.1b Connect to a Streams instance from IBM Watson Studio and other envrionments\n",
+    "### 1.1b Connect to a Streams instance from IBM Watson Studio and other environments\n",
     "\n",
     "The code for each scenario is available in the development guide.\n",
     "\n",
