--- a/Streams-RollingAverageSample.ipynb
+++ b/Streams-RollingAverageSample.ipynb
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,17 +146,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO: streamsx package version: 1.13.15\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import streamsx.topology.context\n",
     "print(\"INFO: streamsx package version: \" + streamsx.topology.context.__version__)\n",
@@ -178,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,20 +423,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<streamsx.topology.topology.Sink at 0x7f133a921898>"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "# publish results as JSON\n",
@@ -469,19 +450,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Submitting Topology to Streams for execution..\n",
-      "JobId:  14 \n",
-      "Job name:  notebook::SensorAverages_14\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# The submission_result object contains information about the running application, or job\n",
     "print(\"Submitting Topology to Streams for execution..\")\n",
@@ -491,7 +462,7 @@
     "  streams_job = submission_result.job\n",
     "  print (\"JobId: \", streams_job.id , \"\\nJob name: \", streams_job.name)\n",
     "else:\n",
-    "  print(\"Submission failed: \"   + str(submssion_result))\n"
+    "  print(\"Submission failed: \"   + str(submission_result))"
    ]
   },
   {
@@ -507,27 +478,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fetching view data ...\n",
-      "{'average': 1629.8335509857934, 'sensor_id': 'sensor_1', 'period_end': 'Fri Nov 22 00:39:16 2019', 'coords': [40.0564, -74.5695]}\n",
-      "{'average': 1524.471073219752, 'sensor_id': 'sensor_10', 'period_end': 'Fri Nov 22 00:39:16 2019', 'coords': [40.0483, -74.7674]}\n",
-      "{'average': 1689.8308912098587, 'sensor_id': 'sensor_100', 'period_end': 'Fri Nov 22 00:39:16 2019', 'coords': [40.6881, -74.1491]}\n",
-      "{'average': 1649.6092107601996, 'sensor_id': 'sensor_11', 'period_end': 'Fri Nov 22 00:39:16 2019', 'coords': [40.3505, -74.5049]}\n",
-      "{'average': 1554.677571290095, 'sensor_id': 'sensor_12', 'period_end': 'Fri Nov 22 00:39:16 2019', 'coords': [40.3861, -74.3837]}\n",
-      "{'average': 1462.7155159122426, 'sensor_id': 'sensor_13', 'period_end': 'Fri Nov 22 00:39:16 2019', 'coords': [40.0952, -74.6117]}\n",
-      "{'average': 1626.834194904709, 'sensor_id': 'sensor_14', 'period_end': 'Fri Nov 22 00:39:16 2019', 'coords': [40.392, -74.2406]}\n",
-      "{'average': 1561.6868035507516, 'sensor_id': 'sensor_15', 'period_end': 'Fri Nov 22 00:39:16 2019', 'coords': [40.4308, -74.1492]}\n",
-      "{'average': 1560.6642033972048, 'sensor_id': 'sensor_16', 'period_end': 'Fri Nov 22 00:39:16 2019', 'coords': [40.6486, -74.27]}\n",
-      "{'average': 1569.0372660625185, 'sensor_id': 'sensor_17', 'period_end': 'Fri Nov 22 00:39:16 2019', 'coords': [40.1581, -74.1365]}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Fetching view data ...\")\n",
     "# Connect to the view and display the data\n",
@@ -573,7 +526,8 @@
     "<li>Select <b>View graph</b> from the context menu action for the running job.</li>\n",
     "</ol>\n",
     "\n",
-    "For all other development environments, use the Streams Console.\n\n",
+    "For all other development environments, use the Streams Console.\n",
+    "\n",
     "[See instructions and an example](http://ibm.biz/Bdz6yD)."
    ]
   },
@@ -636,7 +590,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.6",
    "language": "python",
    "name": "python3"
   },
@@ -650,7 +604,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
