--- a/Streams-EventStoreSample.ipynb
+++ b/Streams-EventStoreSample.ipynb
@@ -38,32 +38,14 @@
     "\n",
     "\n",
     "<a name=\"setup\"></a>\n",
-    "# 1. Setup\n",
-    "### 1.1 Add credentials for the IBM Streams service\n",
-    "\n",
-    "In order to submit a Streams application you need to provide the name of the Streams instance.\n",
-    "\n",
-    "1. From the navigation menu, click **My instances**.\n",
-    "2. Click the **Provisioned Instances** tab.\n",
-    "3. Update the value of `streams_instance_name` in the cell below according to your Streams instance name."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from icpd_core import icpd_util\n",
-    "streams_instance_name = \"my-instance\" ## Change this to Streams instance\n",
-    "cfg=icpd_util.get_service_instance_details(name=streams_instance_name)"
+    "# 1. Setup\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.2 Optional: Upgrade the `streamsx.eventstore` Python package\n",
+    "### 1.1 Optional: Upgrade the `streamsx.eventstore` Python package\n",
     "\n",
     "Uncomment and run the cell below if you want to upgrade to the latest version of the streamsx.eventstore package."
    ]
@@ -101,6 +83,30 @@
    "source": [
     "#import sys\n",
     "#sys.path.insert(0, '/home/wsuser/.local/lib/python3.6/site-packages')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.2 Add credentials for the IBM Streams service\n",
+    "\n",
+    "In order to submit a Streams application you need to provide the name of the Streams instance.\n",
+    "\n",
+    "1. From the navigation menu, click **My instances**.\n",
+    "2. Click the **Provisioned Instances** tab.\n",
+    "3. Update the value of `streams_instance_name` in the cell below according to your Streams instance name."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from icpd_core import icpd_util\n",
+    "streams_instance_name = \"sample-streams\" ## Change this to Streams instance\n",
+    "cfg=icpd_util.get_service_instance_details(name=streams_instance_name)"
    ]
   },
   {
@@ -149,6 +155,103 @@
     "### 1.4 Configure the connection to Db2 Event Store\n",
     "\n",
     "Update the name for the EventStore service/instance name.\n",
+    "\n",
+    "1. From the navigation menu, click **My instances**.\n",
+    "2. Click the **Provisioned Instances** tab.\n",
+    "3. Update the value of `eventstore_instance` in the cell below according to your Event Store instance name.\n",
+    "4. Click **View details** for your Event Store instance.\n",
+    "5. Update the values of `es_db` (Database name), `deployment_id` and `es_connection` (Scala Connection URL) in the cell below according to your Event Store instance settings.\n",
+    "6. Set the values for `host` and `port` from Cloud Pak for Data URL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Change the name according to your Event Store instance\n",
+    "eventstore_instance = 'EventStore-1'\n",
+    "\n",
+    "# Database name\n",
+    "es_db = 'EVENTDB'\n",
+    "\n",
+    "# Deployment id\n",
+    "deployment_id = 'db2eventstore-1574829525307'\n",
+    "\n",
+    "# Access information: Scala Connection URL\n",
+    "es_connection = # Copy Scala Connection URL from Database Details page\n",
+    "\n",
+    "# Cloud Pak for Data host and port\n",
+    "host = '' # host from Cloud Pak for Data URL\n",
+    "port = '' # port from Cloud Pak for Data URL"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.4.1 SSL - Keystore/Truststore\n",
+    "Functions to retrieve certificate file location and password. Information is mandatory for setting up the SSL connection between Event Store client and server."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "from icpd_core import icpd_util\n",
+    "\n",
+    "def get_certificate(deployment_id):\n",
+    "    \"\"\"Retrieve keystore and truststore file location for Event Store service in Cloud Pak for Data.\n",
+    "    Example::\n",
+    "        es_truststore, es_keystore = get_certificate(deployment_id)\n",
+    "    Args:\n",
+    "        deployment_id(str): The deployment ID of the Event Store instance\n",
+    "    Returns:\n",
+    "        truststore, keystore\n",
+    "    .. warning:: The function can be used only in Cloud Pak for Data\n",
+    "    \"\"\"\n",
+    "    clientkeystore = '/user-home/_global_/dbdrivers/eventstore/'+deployment_id+'/clientkeystore'\n",
+    "    es_truststore = clientkeystore\n",
+    "    es_keystore = clientkeystore\n",
+    "    return es_truststore, es_keystore\n",
+    "\n",
+    "def get_keystore_password(deployment_id, host, port):\n",
+    "    \"\"\"Retrieve keystore password and truststore password for Event Store service in Cloud Pak for Data.\n",
+    "    Example::\n",
+    "        es_truststore_password, es_keystore_password = get_keystore_password(deployment_id, host, port)\n",
+    "    Args:\n",
+    "        deployment_id(str): The deployment ID of the Event Store instance\n",
+    "        host(str): Cloud Pak for Data host\n",
+    "        port(str): Cloud Pak for Data port\n",
+    "    Returns:\n",
+    "        es_truststore_password, es_keystore_password\n",
+    "    .. warning:: The function can be used only in Cloud Pak for Data\n",
+    "    \"\"\"\n",
+    "    eventstore_cfg=icpd_util.get_service_instance_details(name=eventstore_instance)\n",
+    "    #print(eventstore_cfg)\n",
+    "    token = eventstore_cfg['user_token']\n",
+    "\n",
+    "    session=requests.session()\n",
+    "    requests.packages.urllib3.disable_warnings()\n",
+    "    rest_url = 'https://' + host + ':' + port + '/icp4data-databases/'+deployment_id+'/nbg/com/ibm/event/api/v1/oltp/keystore_password'\n",
+    "    print(rest_url)\n",
+    "    response = session.get(rest_url, headers={\"Authorization\": \"Bearer \" + token}, verify=False)\n",
+    "    if response.status_code==200:\n",
+    "        es_truststore_password=response.text\n",
+    "        es_keystore_password=es_truststore_password\n",
+    "    return es_truststore_password, es_keystore_password"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.4.2 Setup application configuration\n",
+    "\n",
     "Run the cell below to configure the connection for the IBM Streams application.\n",
     "\n",
     "The connection details and credentials are stored in an application configuration for IBM Streams application. As name for application configuration is the name of Event Store instance used (`eventstore_instance`). The application configuration contains the following information:\n",
@@ -167,35 +270,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Change the name according to your Event Store instance\n",
-    "eventstore_instance='EventStore-1'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from streamsx.rest import Instance\n",
     "import streamsx.topology.context\n",
     "import streamsx.eventstore as es\n",
+    "import getpass\n",
     "\n",
     "cfg[streamsx.topology.context.ConfigParams.SSL_VERIFY] = False\n",
     "instance = Instance.of_service(cfg)\n",
     "\n",
+    "# retrieve certificate location\n",
+    "es_truststore, es_keystore = get_certificate(deployment_id)\n",
+    "\n",
     "# check if application configuration exists\n",
     "eventstore_app_config = instance.get_application_configurations(name=eventstore_instance)\n",
     "if eventstore_app_config:\n",
-    "    # retrieve Event Store service details\n",
-    "    eventstore_cfg=icpd_util.get_service_instance_details(name=eventstore_instance)\n",
-    "    # get location of clientkeystore file and set values for es_truststore, es_keystore, app_cfg for later use\n",
-    "    es_truststore, es_keystore = es.get_certificate(eventstore_cfg, name=eventstore_instance)\n",
     "    app_cfg = eventstore_instance\n",
     "else:\n",
-    "    # retrieve Event Store service details\n",
-    "    eventstore_cfg=icpd_util.get_service_instance_details(name=eventstore_instance)\n",
-    "    es_db, es_connection, es_user, es_password, es_truststore, es_truststore_password, es_keystore, es_keystore_password = es.get_service_details(eventstore_cfg, name=eventstore_instance)\n",
+    "    es_user = input(\"Event Store user:\")\n",
+    "    es_password = getpass.getpass('Event Store password for user '+es_user+':')\n",
+    "    es_truststore_password, es_keystore_password = get_keystore_password(deployment_id, host, port)\n",
     "    # create application configuration\n",
     "    app_cfg = es.configure_connection(instance, name=eventstore_instance, database=es_db, connection=es_connection, user=es_user, password=es_password, keystore_password=es_keystore_password, truststore_password=es_truststore_password)\n",
     "\n",
@@ -497,7 +590,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python3.6",
+   "display_name": "Python 3.6",
    "language": "python",
    "name": "python3"
   },
@@ -511,7 +604,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
