replace insert function with Insert class

--- a/Streams-EventStoreSample.ipynb
+++ b/Streams-EventStoreSample.ipynb
@@ -303,7 +303,7 @@
     "# 2. Create the application\n",
     "This application is going to ingest simulated tuples.\n",
     "\n",
-    "These simulated tuples are inserted as rows into a table using Db2 Event Store Scala API. This functionality is provided by `streamsx.eventstore.insert()` as \"EventStoreWriter\".\n",
+    "These simulated tuples are inserted as rows into a table using Db2 Event Store Scala API. This functionality is provided by `streamsx.eventstore.Insert()` as \"EventStoreWriter\".\n",
     "\n",
     "In this example we create a table of two columns:\n",
     "**| ID:Long  |  NAME:String |**\n",
@@ -371,9 +371,9 @@
     "\n",
     "**Define the table schema**\n",
     "\n",
-    "* The table name is defined in the `table` variable. This is applied as `table` parameter to the `streamsx.eventstore.insert()` function\n",
+    "* The table name is defined in the `table` variable. This is applied as `table` parameter to the `streamsx.eventstore.Insert()` class\n",
     "* The table schema is specified by the Stream type `tuple<int64 ID, rstring NAME>`\n",
-    "* Primary key of the table is applied as `primary_key` parameter to the `streamsx.eventstore.insert()` function"
+    "* Primary key of the table is applied as `primary_key` parameter to the `streamsx.eventstore.Insert()` class"
    ]
   },
   {
@@ -400,7 +400,7 @@
     "        counter = counter + 1\n",
     "        time.sleep(0.01)\n",
     "\n",
-    "# convert it to SPL schema for the Event stream operator\n",
+    "# convert it to SPL schema for the Event Store operator\n",
     "tuple_schema = StreamSchema(\"tuple<int64 ID, rstring NAME>\")\n",
     "# Generates data for a stream of two attributes. Each attribute maps to a column using the same name of the DB2 Event Store table.\n",
     "pulse = topo.source(generate_data, name=\"GeneratedData\").map(lambda tpl: (tpl[\"ID\"], tpl[\"NAME\"]), schema=tuple_schema)\n",
@@ -410,7 +410,7 @@
     "batch_size=100\n",
     "\n",
     "# insert tuple data into table as rows\n",
-    "sink=es.insert(pulse, config=app_cfg, table=table, batch_size=batch_size, primary_key='ID', partitioning_key='ID', truststore=es_truststore, keystore=es_keystore, name='ES_Inserter')"
+    "pulse.for_each(es.Insert(config=app_cfg, table=table, batch_size=batch_size, primary_key='ID', partitioning_key='ID', truststore=es_truststore, keystore=es_keystore, name='ES_Inserter'))"
    ]
   },
   {
