replace run_statement with JDBCStatement composite map

--- a/Streams-DatabaseSample.ipynb
+++ b/Streams-DatabaseSample.ipynb
@@ -232,16 +232,16 @@
     "### How to use the streamsx.database package\n",
     "The streamsx.database package is the python wrapper for the [streamsx.jdbc](https://ibmstreams.github.io/streamsx.jdbc/doc/spldoc/html) toolkit\n",
     "\n",
-    "To interact with a Db2 database from Streams, you pass a SQL statement to the `streamsx.database.run_statement` function.\n",
+    "To interact with a Db2 database from Streams, you pass a SQL statement to the `streamsx.database.JDBCStatement` class.\n",
     "\n",
-    "`run_statement` is the main function of `streamsx.database` package.\n",
+    "`JDBCStatement` is the main class of `streamsx.database` package.\n",
     "\n",
     "It executes a SQL statement and produces a [`Stream`](https://streamsxtopology.readthedocs.io/en/stable/streamsx.topology.topology.html#stream) of the results.\n",
     "It needs at least two mandatory parameters, the first one is the input `Stream` and the second parameter is the database credentials in JSON format.\n",
     "\n",
-    "There are 2 ways to execute SQL statements using `db.run_statement`:\n",
-    "- Set the `stream` parameter to a `Stream` containing the statements to execute. This is used for statements like creating or dropping tables.\n",
-    "- Set the `sql` parameter to the SQL statement and the `stream` parameter to the data you want to send to Db2. Use this when inserting data.\n",
+    "There are 2 ways to execute SQL statements using `db.JDBCStatement`:\n",
+    "- `Stream` containing the statements to execute. This is used for statements like creating or dropping tables.\n",
+    "- Set the `sql` parameter to the SQL statement and the `stream` contains the data you want to send to Db2. Use this when inserting data.\n",
     "\n",
     "This application will show both ways. It executes SQL statements that: \n",
     "- Drop the Db2 table, if exists.\n",
@@ -281,7 +281,7 @@
     "\n",
     "In the following step the `topo.source` creates a `Stream` containing the two SQL statements to drop and create the table. \n",
     "\n",
-    "`db.run_statement` executes the two statements in the input stream, so it will drop the table and create a new table.\n"
+    "`db.JDBCStatement` executes the two statements in the input stream, so it will drop the table and create a new table.\n"
    ]
   },
   {
@@ -293,7 +293,7 @@
     "# The streamToCreateTable is a Stream containing the two SQL statements: sql_drop and sql_create\n",
     "streamToCreateTable = topo.source([sql_drop, sql_create]).as_string()\n",
     "# drop the table if exist and create a new table in database\n",
-    "db.run_statement(stream=streamToCreateTable, credentials=db2credentials, name=\"CREATE_TABLE\",)\n"
+    "streamToCreateTable.map(db.JDBCStatement(credentials=db2credentials), name='CREATE_TABLE')\n"
    ]
   },
   {
@@ -304,14 +304,14 @@
     "\n",
     "Next, we generate a stream of data and insert it into the table we created.\n",
     "\n",
-    "The function `generate_data()` generates some data with schema `(ID INTEGER, NAME STRING, AGE INTEGER)` that will be inserted into the database..\n",
+    "The function `generate_data()` generates some data with schema `(ID INTEGER, NAME STRING, AGE INTEGER)` that will be inserted into the database.\n",
     "\n",
-    "Before it can be inserted in the database, we have to change the [schema](https://streamsxtopology.readthedocs.io/en/stable/streamsx.topology.schema.html) of the input data `Stream` to the [StreamsSchema](https://streamsxtopology.readthedocs.io/en/stable/streamsx.topology.schema.html#streamsx.topology.schema.StreamSchema) type, which is the format accepted by the `run_statement` function.  See the [list of mappings from Python types to StreamSchema types](https://streamsxtopology.readthedocs.io/en/stable/streamsx.topology.schema.html#streamsx.topology.schema.StreamSchema)\n",
+    "Before it can be inserted in the database, we have to change the [schema](https://streamsxtopology.readthedocs.io/en/stable/streamsx.topology.schema.html) of the input data `Stream` to the [StreamsSchema](https://streamsxtopology.readthedocs.io/en/stable/streamsx.topology.schema.html#streamsx.topology.schema.StreamSchema) type, which is the format accepted by the `JDBCStatement` class.  See the [list of mappings from Python types to StreamSchema types](https://streamsxtopology.readthedocs.io/en/stable/streamsx.topology.schema.html#streamsx.topology.schema.StreamSchema)\n",
     "\n",
     "\n",
-    "The `genData` `Stream` contains the data produced by the `generate_data()` function.\n",
+    "The `gen_data` `Stream` contains the data produced by the `generate_data()` function.\n",
     "\n",
-    "We again use `db.run_statement` but in the following step, it uses `genData` as input stream and the predefined `sql_insert` variable as the SQL statement.\n"
+    "We again use `db.JDBCStatement` but in the following step, it uses `gen_data` as input stream and the predefined `sql_insert` variable as the SQL statement.\n"
    ]
   },
   {
@@ -332,15 +332,19 @@
     "        yield  {\"NAME\": \"Name_\" + str(random.randint(0,500)), \"ID\": counter, \"AGE\": random.randint(10,99)}\n",
     "        time.sleep(0.10)\n",
     "\n",
-    "# convert it to SPL schema for the database operator run_statement\n",
+    "# convert it to SPL schema for the database operator JDBCStatement\n",
     "tuple_schema = StreamSchema(\"tuple<int64 ID, rstring NAME, int32 AGE>\")\n",
     "# Generates data for a stream of three attributes. Each attribute maps to a column using the same name of the Db2 database table.\n",
-    "genData = topo.source(generate_data, name=\"GeneratedData\").map(lambda tpl: (tpl[\"ID\"], tpl[\"NAME\"], tpl[\"AGE\"]),\n",
+    "gen_data = topo.source(generate_data, name=\"GeneratedData\").map(lambda tpl: (tpl[\"ID\"], tpl[\"NAME\"], tpl[\"AGE\"]),\n",
     "                    schema=tuple_schema)\n",
     "\n",
     "\n",
     "# insert generated rows into table\n",
-    "insertResults= db.run_statement(name=\"INSERT\", stream=genData, sql=sql_insert, sql_params=\"ID, NAME, AGE\" ,credentials = db2credentials)"
+    "config_insert = {\n",
+    "    \"sql\": sql_insert\n",
+    "    \"sql_params\": 'ID, NAME, AGE'\n",
+    "}\n",
+    "insertResults = gen_data.map(db.JDBCStatement(db2credentials, **config_insert), name='INSERT'))"
    ]
   },
   {
@@ -348,7 +352,7 @@
    "metadata": {},
    "source": [
     "## <a name=\"select\"> </a> 2.3. Retrieve data from the table\n",
-    "In this step the `run_statement` runs the SQL statement `\"SELECT * FROM RUN_SAMPLE_DEMO\"` and returns the results in tuple schema `tuple<int64 ID, rstring NAME, int32 AGE>` .\n"
+    "In this step the `JDBCStatement` runs the SQL statement `\"SELECT * FROM RUN_SAMPLE_DEMO\"` and returns the results in tuple schema `tuple<int64 ID, rstring NAME, int32 AGE>` .\n"
    ]
   },
   {
@@ -358,7 +362,10 @@
    "outputs": [],
    "source": [
     "# select all rows from table\n",
-    "selectResults= db.run_statement(name=\"SELECT\", schema='tuple<int64 ID, rstring NAME, int32 AGE>', stream=genData, sql=sql_select, credentials = db2credentials)\n",
+    "config_select = {\n",
+    "    \"sql\": sql_select\n"
+    "}\n",
+    "selectResults= gen_data.map(db.JDBCStatement(db2credentials, **config_select), name='SELECT', schema='tuple<int64 ID, rstring NAME, int32 AGE>')\n",
     "selectResults.print()\n",
     "\n",
     "# create a view to check retrieving data from a table\n",
