--- a/Streams-DatabaseSample.ipynb
+++ b/Streams-DatabaseSample.ipynb
@@ -290,10 +290,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The streamToCreateTable is a Stream containing the two SQL statements: sql_drop and sql_create\n",
-    "streamToCreateTable = topo.source([sql_drop, sql_create]).as_string()\n",
+    "# The crt_table is a Stream containing the two SQL statements: sql_drop and sql_create\n",
+    "crt_table = topo.source([sql_drop, sql_create]).as_string()\n",
     "# drop the table if exist and create a new table in database\n",
-    "streamToCreateTable.map(db.JDBCStatement(credentials=db2credentials), name='CREATE_TABLE')\n"
+    "crt_table.map(db.JDBCStatement(credentials=db2credentials), name='CREATE_TABLE')\n"
    ]
   },
   {
@@ -341,10 +341,10 @@
     "\n",
     "# insert generated rows into table\n",
     "config_insert = {\n",
-    "    \"sql\": sql_insert\n",
+    "    \"sql\": sql_insert,\n",
     "    \"sql_params\": 'ID, NAME, AGE'\n",
     "}\n",
-    "insertResults = gen_data.map(db.JDBCStatement(db2credentials, **config_insert), name='INSERT'))"
+    "insertResults = gen_data.map(db.JDBCStatement(db2credentials, **config_insert), name='INSERT')"
    ]
   },
   {
@@ -363,7 +363,7 @@
    "source": [
     "# select all rows from table\n",
     "config_select = {\n",
-    "    \"sql\": sql_select\n"
+    "    \"sql\": sql_select\n",
     "}\n",
     "selectResults= gen_data.map(db.JDBCStatement(db2credentials, **config_select), name='SELECT', schema='tuple<int64 ID, rstring NAME, int32 AGE>')\n",
     "selectResults.print()\n",
