resolve issue in for_each

--- a/Streams-EventStoreSample.ipynb
+++ b/Streams-EventStoreSample.ipynb
@@ -410,7 +410,7 @@
     "batch_size=100\n",
     "\n",
     "# insert tuple data into table as rows\n",
-    "pulse.for_each(es.Insert(config=app_cfg, table=table, batch_size=batch_size, primary_key='ID', partitioning_key='ID', truststore=es_truststore, keystore=es_keystore, name='ES_Inserter'))"
+    "pulse.for_each(es.Insert(config=app_cfg, table=table, batch_size=batch_size, primary_key='ID', partitioning_key='ID', truststore=es_truststore, keystore=es_keystore), name='ES_Inserter')"
    ]
   },
   {
