update connection cells

--- a/Streams-DatabaseSample.ipynb
+++ b/Streams-DatabaseSample.ipynb
@@ -113,57 +113,14 @@
    "source": [
     "### <a name=\"credentials\"> </a> 1.3 Configure the connection to Db2 Warehouse\n",
     "\n",
-    "We need a Db2 credentials as JSON string to connect to a Db2 database.\n",
-    "This JSON string contains the database credentials `username`, `password` and `jdbcurl`.\n",
-    "\n",
-    "To create a Db2 credentials, please perform the following steps:\n",
-    "\n",
-    "1. Create a Db2 Warehouse service on IBM cloud.\n",
-    "\n",
-    "  you need to have an IBM account to create a Db2 service.\n",
-    "\n",
-    "  https://console.bluemix.net/catalog/?search=db2\n",
-    "\n",
-    "2. Create a service credential for Db2 service on IBM cloud.\n",
-    "3. Copy the credentials in clipboard.\n",
-    "4. Paste the credentials into Db2 Warehouse credentials prompt below.\n",
-    "\n",
-    "If you want to use another Db2 database, you can create a JSON string with the following attributes:\n",
-    "\n",
-    "    {\n",
-    "      \"username\": \"your-db-user-name\",\n",
-    "      \"password\": \"your-db-password\",\n",
-    "      \"jdbcurl\": \"jdbc:db2://your-db2-hostname:50000/your-database-name\"\n",
-    "    }"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import getpass\n",
-    "db2_service_credentials=getpass.getpass('Db2 Warehouse credentials:')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "\n",
-    "# store the database credentials in db2credentials\n",
-    "db2credentials = json.loads(db2_service_credentials)"
+    "We need Db2 credentials to connect to a Db2 database."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.3.1 Alternative: Use a configured external connection\n",
+    "### 1.3.1 Use a configured external connection\n",
     "\n",
     "Perform the steps [Connecting to data source](https://docs-icpdata.mybluemix.net/docs/content/SSQNUZ_current/com.ibm.icpdata.doc/igc/t_connect_data_sources.html) \n",
     "and create an external configuration for your Db2 connection.\n",
@@ -185,7 +142,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Change the connection_name, uncomment and run the cell below "
+    "Change the `connection_name` and run the cell below "
    ]
   },
   {
@@ -194,9 +151,75 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#connection_name = 'Db2-Ext'\n",
-    "#db2credentials = icpd_util.get_connection(connection_name, conn_class='external')\n",
-    "#print (db2credentials)"
+    "connection_name = 'auto-dashdb'\n",
+    "db2credentials = icpd_util.get_connection(connection_name, conn_class='external')\n",
+    "print (db2credentials)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.3.2 Use credentials from IBM cloud Db2 Warehouse service\n",
+    "\n",
+    "1. Create a Db2 Warehouse service on IBM cloud.\n",
+    "\n",
+    "  you need to have an IBM account to create a Db2 service.\n",
+    "\n",
+    "  https://console.bluemix.net/catalog/?search=db2\n",
+    "\n",
+    "2. Create a service credential for Db2 service on IBM cloud.\n",
+    "3. Copy the credentials in clipboard.\n",
+    "4. Uncomment and run the cell below\n",
+    "4. Paste the credentials into Db2 Warehouse credentials prompt below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#import getpass\n",
+    "#db2_service_credentials=getpass.getpass('Db2 Warehouse credentials:')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#import json\n",
+    "#db2credentials = json.loads(db2_service_credentials)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.3.3 Custom connection\n",
+    "\n",
+    "If you want to use another Db2 database, you can create a dict with the following attributes:\n",
+    "\n",
+    "    {\n",
+    "      \"username\": \"your-db-user-name\",\n",
+    "      \"password\": \"your-db-password\",\n",
+    "      \"jdbcurl\": \"jdbc:db2://your-db2-hostname:50000/your-database-name\"\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#db2credentials = {\n",
+    "#      \"username\": \"your-db-user-name\",\n",
+    "#      \"password\": \"your-db-password\",\n",
+    "#      \"jdbcurl\": \"jdbc:db2://your-db2-hostname:50000/your-database-name\"\n",
+    "#    }"
    ]
   },
   {
@@ -218,7 +241,6 @@
     "from streamsx.topology.context import *\n",
     "from streamsx.topology.schema import StreamSchema\n",
     "import streamsx.database as db\n",
-    "\n",
     "\n",
     "# create a Topology object\n",
     "topo = Topology(name=\"DatabaseSample\")"
@@ -290,10 +312,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from streamsx.topology.schema import CommonSchema, StreamSchema\n",
     "# The crt_table is a Stream containing the two SQL statements: sql_drop and sql_create\n",
     "crt_table = topo.source([sql_drop, sql_create]).as_string()\n",
     "# drop the table if exist and create a new table in database\n",
-    "crt_table.map(db.JDBCStatement(credentials=db2credentials), name='CREATE_TABLE')\n"
+    "crt_table.map(db.JDBCStatement(credentials=db2credentials), name='CREATE_TABLE', schema=CommonSchema.String)"
    ]
   },
   {
@@ -338,13 +361,12 @@
     "gen_data = topo.source(generate_data, name=\"GeneratedData\").map(lambda tpl: (tpl[\"ID\"], tpl[\"NAME\"], tpl[\"AGE\"]),\n",
     "                    schema=tuple_schema)\n",
     "\n",
-    "\n",
     "# insert generated rows into table\n",
     "config_insert = {\n",
     "    \"sql\": sql_insert,\n",
     "    \"sql_params\": 'ID, NAME, AGE'\n",
     "}\n",
-    "insertResults = gen_data.map(db.JDBCStatement(db2credentials, **config_insert), name='INSERT')"
+    "insertResults = gen_data.map(db.JDBCStatement(db2credentials, **config_insert), name='INSERT', schema=tuple_schema)"
    ]
   },
   {
@@ -369,7 +391,7 @@
     "selectResults.print()\n",
     "\n",
     "# create a view to check retrieving data from a table\n",
-    "selectView = selectResults.view(name=\"selectRecords\", description=\"Sample of selected records\")\n"
+    "selectView = selectResults.view(name=\"selectRecords\", description=\"Sample of selected records\")"
    ]
   },
   {
